# Pause_Empathique

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
pause_empathique/: asgi.py  settings.py  urls.py  wsgi.py
pauses/: admin.py  apps.py  models.py  urls.py  views.py
pauses/fixtures/: feelings.json  feelings_fixture.json  needs.json
pauses/migrations/: 0001_initial.py  0002_pause_feelings_pause_needs.py  0003_alter_pause_options_pause_title_and_more.py
pauses/templatetags/: navigation_tags.py
static/css/: input.css  output.css
static/js/: keep-toggle-open-and-display-selected-items.js  keep-toggle-open.js  show-and-hide-password.js
templates/: base.html  header.html
templates/partials/: field_errors.html  non_field_errors.html
templates/pauses/: _desktop_diary.html  dashboard.html  diary.html  feelings.html  needs.html  observation.html  pause_detail.html  pause_update.html
templates/users/: home.html  login.html  register.html
tests/: test_models.py  test_views.py
users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_gender.py  0003_alter_user_gender.py
users/templatetags/: text_color_filters.py
