[project]
name = "pause-empathique"
version = "0.1.0"
description = ""
authors = [
    {name = "Pressense Fasani",email = "camillefasani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pause_empathique", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
